--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -263,7 +263,7 @@
         <span class="since">Since 1.0.4</span></dd>
     </dl>
 
-    <h4><a name="eleemntsOSContainer">Container boot</a></h4>
+    <h4><a name="elementsOSContainer">Container boot</a></h4>
 
     <p>
       When booting a domain using container based virtualization, instead
