Introduce APIs for splitting/joining strings
This introduces a few new APIs for dealing with strings.
One to split a char * into a char **, another to join a
char ** into a char *, and finally one to free a char **

There is a simple test suite to validate the edge cases
too. No more need to use the horrible strtok_r() API,
or hand-written code for splitting strings.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>
(cherry picked from commit 76c1fd33c8093d6a7173a85486e1e6f51a832135)
Signed-off-by: Eric Blake <eblake@redhat.com>

Conflicts:
	tests/Makefile.am - several intermediate tests not backported

--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,7 @@
 /tests/virkeyfiletest
 /tests/virnet*test
 /tests/virshtest
+/tests/virstringtest
 /tests/virtimetest
 /tests/viruritest
 /tests/vmx2xmltest
