Add https protocol support for cdrom disk
The https protocol is also accepted by qemu/KVM when specifying the cdrom ISO
image.

The xml should be as following:

    <disk type='network' device='cdrom'>
      <source protocol='https' name='/url/path'>
        <host name='host.name' port='443'/>
      </source>
    </disk>

Signed-off-by: Aline Manera <alinefm@br.ibm.com>

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -1511,6 +1511,14 @@
     &lt;/disk&gt;
     &lt;disk type='network' device='cdrom'&gt;
       &lt;driver name='qemu' type='raw'/&gt;
+      &lt;source protocol="https" name="url_path"&gt;
+        &lt;host name="hostname" port="443"/&gt;
+      &lt;/source&gt;
+      &lt;target dev='hdc' bus='ide' tray='open'/&gt;
+      &lt;readonly/&gt;
+    &lt;/disk&gt;
+    &lt;disk type='network' device='cdrom'&gt;
+      &lt;driver name='qemu' type='raw'/&gt;
       &lt;source protocol="ftp" name="url_path"&gt;
         &lt;host name="hostname" port="21"/&gt;
       &lt;/source&gt;
