maint: ignore recently-added test
* .gitignore: Ignore metadatatest.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,7 @@
 /tests/hashtest
 /tests/jsontest
 /tests/libvirtdconftest
+/tests/metadatatest
 /tests/networkxml2argvtest
 /tests/nodeinfotest
 /tests/nwfilterxml2xmltest
