VMware: Make version parsing testable and add tests
This splits up the version parsing code into a callable API like QEMU
help/version string parsing so that we can test it as we need to add
additional patterns for newer versions/products.

--- a/.gitignore
+++ b/.gitignore
@@ -217,6 +217,7 @@
 /tests/virsystemdtest
 /tests/virtimetest
 /tests/viruritest
+/tests/vmwarevertest
 /tests/vmx2xmltest
 /tests/xencapstest
 /tests/xmconfigtest
