doc: fix XML for the RNG device example
Add a missing '/' to close the "source" element.

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -4903,8 +4903,8 @@ qemu-kvm -net nic,model=? /dev/null
       &lt;backend model='random'&gt;/dev/random&lt;/backend&gt;
       &lt;!-- OR --&gt;
       &lt;backend model='egd' type='udp'&gt;
-        &lt;source mode='bind' service='1234'&gt;
-        &lt;source mode='connect' host='1.2.3.4' service='1234'&gt;
+        &lt;source mode='bind' service='1234'/&gt;
+        &lt;source mode='connect' host='1.2.3.4' service='1234'/&gt;
       &lt;/backend&gt;
     &lt;/rng&gt;
   &lt;/devices&gt;
