--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2004,6 +2004,9 @@ fi
 %endif
 
 %changelog
+* Fri Sep 20 2013 Cole Robinson <crobinso@redhat.com> - 1.0.5.6-1
+- Maintenance release 1.0.5.6
+
 * Thu Aug 01 2013 Cole Robinson <crobinso@redhat.com> - 1.0.5.5-1
 - Maintenance release 1.0.5.5
 
